--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,23 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- Dependecia de PostgreSQL -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.11</version>
+		</dependency>
+		
+			
+		<!-- Dependecia para manejar los entitymanager -->		
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-entitymanager</artifactId>
+		    <version>5.4.0.Final</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
